--- a/index.html
+++ b/index.html
@@ -59,3 +59,16 @@
     </footer>
 </body>
 </html>
+<header>
+    <img src="votre-image-banniere.jpg" alt="Santé et Bien-être" style="width: 100%; max-height: 300px; object-fit: cover;">
+    <h1>Santé et Bien-Être</h1>
+    <nav>
+        <ul>
+            <li><a href="#home">Accueil</a></li>
+            <li><a href="#shop">Boutique</a></li>
+            <li><a href="#about">À propos</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+
